2021-10-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.5.1.4 released.

	* tramp.el (tramp-make-tramp-file-name): Set advertised calling
	conventions.

	* tramp-gvfs.el (tramp-gvfs-handler-mounted-unmounted):
	Protect `tramp-make-tramp-file-name' call.

2021-10-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-error): Move binding of `inhibit-message' ...
	(tramp-signal-hook-function): ... here.
	(tramp-handle-access-file): Rewrite.
	(tramp-handle-file-readable-p): New defun.
	(tramp-handle-make-process): Setting :filter to t works since
	Emacs 29.1 only.

	* tramp-adb.el (tramp-adb-file-name-handler-alist):
	Use `tramp-adb-handle-file-executable-p' and
	`tramp-adb-handle-file-readable-p'.
	(tramp-adb-handle-file-executable-p)
	(tramp-adb-handle-file-readable-p): New defuns.
	(tramp-adb-handle-file-writable-p): Simplify.
	(tramp-adb-handle-make-process): Handle :filter being t.
	(tramp-adb-find-test-command): Remove.

	* tramp-sh.el (tramp-sh-handle-file-readable-p):
	* tramp-sudoedit.el (tramp-sudoedit-handle-file-readable-p):
	* tramp-gvfs.el (tramp-gvfs-file-name-handler-alist):
	Use `tramp-handle-file-readable-p'.
	(tramp-gvfs-handle-file-executable-p): Do not check whether file
	exists, this is done in `tramp-check-cached-permissions'.
	(tramp-gvfs-handle-file-readable-p): Remove.

2021-10-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-process):
	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process): Filter can be t.

2021-10-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-path): Adapt docstring.
	(tramp-action-login, tramp-action-password, tramp-action-yesno)
	(tramp-action-yn, tramp-process-actions): Move let-binding of
	`enable-recursive-minibuffers' up.
	(tramp-handle-make-process, tramp-handle-write-region):
	* tramp-adb.el (tramp-adb-handle-write-region)
	(tramp-adb-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process)