@@ -1,3 +1,8 @@
+2021-11-11  Aleksandr Vityazev  <avityazev@posteo.org>
+
+	* tramp-compat.el: Make `tramp-compat-file-name-concat' work like
+	file-name-concat.  (Bug#51754)
+
 2021-10-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.5.1.4 released.
